add cambios proyecto final

--- a/section/kids.html
+++ b/section/kids.html
@@ -1,83 +1,147 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="How to teach a child to read a book in 3 simple steps.">
-    <meta name="keywords" content="child, read, teach, reading, book, genre, boy, girl">
-    <link rel="icon" type="image/png" href="../images/book.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Library Kids</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
-      <figure class="img-banner">
-      </figure>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../section/genre.html">Genre</a>
-             </li>
-             <li class="nav-item">
-                <a class="nav-link active" href="../section/kids.html">Kids</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../section/contact.html">Contact</a>
-            </li>
-          </ul>
-          <form class="d-flex justify-content-end">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-secondary border-0" type="submit">Search</button>
-          </form>
-        </div>
-    </nav>
-    <section class="container padding-section container__kids">
-        <h1 class="title__bestsellers anima animate__animated animate__backInLeft">HOW TO TEACH A CHILD TO READ IN 3 EASY STEPS</h1>
-        <div class=" d-flex flex-column align-items-center">
-            <h3 class="p-2">1. READ ALOUD TO YOUR CHILD </h3>
-            <figure class="overflow-hidden img-fluid"><img src="../images/boyreading.jpg" alt="Boy reading with his mom"></figure>
-            <p class="p-5">Teaching your child to read is truly a process that begins at infancy. How much you read to your child is completely up to you and your family, but I suggest you aim to read at least 3-4 books a day, even while your child is very young.</p>
-        </div>
-        <div class=" d-flex flex-column align-items-center">
-        <h3 class="p-2">2. ASK QUESTIONS</h3>
-            <figure class="overflow-hidden img-fluid"><img src="../images/boyreading5.jpg" alt="Boy reading"></figure>
-            <p class="p-5">Asking questions while reading to your child is not only great for encouraging your child to interact with the book, but it is also extremely effective in developing his ability to comprehend what he is reading.</p>
-        </div>
-        <div class=" d-flex flex-column align-items-center">
-            <h3 class="p-2">3. BE A GOOD (READING) EXAMPLE</h3>
-            <figure class="overflow-hidden img-fluid"><img src="../images/boyreading4.jpg" alt="Boy reading with his dad"></figure>
-            <p class="p-5">Even if your child is fascinated with books from an early age, her fascination will quickly dwindle if she does not see reading modeled in her home. If you are not an avid reader yourself, make a conscious effort to let your children see you reading for at least a few minutes each day! </p>
-        </div>
-    </section>
-    <footer class="container-fluid p-0 bg-light mt-5">
-      <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-        <figure class="img-banner">
-        </figure>
-        <p class="animate__animated animate__pulse">All rights reserved</p>
-        <div class="rrss">
-          <div class="rrss-fb"><a rel="noopener" href="#">
-          </a></div>
-          <div class="rrss-ig"><a rel="noopener" href="#">
-          </a></div>
-          <div class="rrss-tw"><a rel="noopener" href="#">
-          </a></div>
-        </div>
-      </div>
-    </footer>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="How to teach a child to read a book in 3 simple steps.">
+        <meta name="keywords" content="child, read, teach, reading, book, genre, boy, girl">
+        <link rel="icon" type="image/png" href="../images/book.png">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <link rel="stylesheet" href="../css/estilos.css">
+        <title>Library Kids</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
+            <figure class="img-banner">
+            </figure>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/genre.html">Genre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../section/kids.html">Kids</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/contact.html">Contact</a>
+                    </li>
+                </ul>
+                <form class="d-flex justify-content-end">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-secondary border-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+        <section>
+            <div class="container-fluid container-kids">
+                <h1>Reading With Children</h1>
+            </div>
+        </section>
+        <section>
+            <div class="container container-kids-2">
+                <div class="row">
+                    <h3 class="wow animate__animated animate__lightSpeedInLeft anima"><strong>What are the benefits of reading to children?</strong></h3>
+                    <p>First, set the scene in your head. You choose a book. You sit down in your favorite armchair, with your child in your lap, and open to the first of many smooth, colorful pages.
+                        You begin to read, and your child is utterly captivated by the story. It’s magic. What’s even better is that your child isn’t just having fun, they’re learning!
+                        Reality may look a little different: Just know you’re not alone if your baby tries to eat the book or your toddler wanders around the room instead of sitting patiently. But the benefits of reading remain the same.</p>
+                </div>
+                <div class="row">
+                    <h3 class="wow animate__animated animate__lightSpeedInLeft anima"><strong>Creativity</strong></h3>
+                    <p>Books and stories open up a whole new world to your child. Yes, there are plenty of nonfiction books on dinosaurs, bugs, and airplanes. Fiction stories, though, go beyond the real world and employ fantasy elements that get kids thinking outside the box.
+                        Children have vivid imaginations as is, so reading serves to further feed their creativity. And experts at PBS note that creativity is important for developing interests and ideas, as well as for fostering emotional health.</p>
+                </div>
+                <div class="row">
+                    <h3 class="wow animate__animated animate__lightSpeedInLeft anima"><strong>Attention</strong></h3>
+                    <p>Dinah Castro, a bilingual family well-being educator with Cornell Cooperative Extension, shares that reading to children helps them develop key concentration and self-discipline skills.
+                        You’ve probably dealt with a squirming, distracted toddler at story hour. But what you may also notice is that — over time — regular reading gets kids listening in order to comprehend.
+                        And when they’re listening, they’re more likely to sit still, develop a longer attention span, and even work on their budding memory-retention skills.</p>
+                </div>
+                <div class="row">
+                    <h3 class="wow animate__animated animate__lightSpeedInLeft anima"><strong>Cognitive and language development</strong></h3>
+                    <p>Even the youngest children benefit from hearing their caregivers read to them. A 2013 study showed that babies who are read to and talked to score higher in language skills and cognitive development, like problem solving.
+                        Research from 2018 suggests that this link extends throughout childhood into the teen years. In fact, researchers say that verbal interactions (reading, talking, etc.) between parents and young kids may promote higher language and IQ scores all the way up to age 14.</p>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <h3 class="wow animate__animated animate__lightSpeedInLeft anima"><strong>Bonding</strong></h3>
+                        <p>Reading provides a wonderful opportunity for you and your child to connect. It’s a nice way to spend time together and slow down during an otherwise hectic day.
+                        Research from 2008 pointed out how reading can support a solid parent-child relationship. Kids feel secure when they’re read to. Plus, caregivers who have a positive attitude toward books and reading in turn help their children view literacy in a positive way.</p>
+                        <h3 class="wow animate__animated animate__lightSpeedInLeft anima mt-5"><strong>Social and emotional development</strong></h3>
+                        <p>Castro also says that reading to young children teaches them how to cope with “difficult or stressful experiences.” She further explains that reading stories about potentially emotional situations, like starting at a new school, can help get a conversation going and show children that their feelings are normal.</p>
+                    </div>
+                    <div class="col col-lg-6">
+                        <div class="gif-kids">
+                            <img src="../images/gifkids.gif" alt="Read Books gif">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+
+
+
+        <!-- <section class="container padding-section container__kids">
+            <h1 class="title__bestsellers anima animate__animated animate__backInLeft">HOW TO TEACH A CHILD TO READ IN 3 EASY STEPS</h1>
+            <div class=" d-flex flex-column align-items-center">
+                <h3 class="p-2">1. READ ALOUD TO YOUR CHILD </h3>
+                <div class="overflow-hidden img-fluid">
+                    <img src="../images/boyreading.jpg" alt="A boy reading with his mom">
+                </div>
+                <p class="p-5">Teaching your child to read is truly a process that begins at infancy. How much you read to your child is completely up to you and your family, but I suggest you aim to read at least 3-4 books a day, even while your child is very young.</p>
+            </div>
+            <div class=" d-flex flex-column align-items-center">
+                <h3 class="p-2">2. ASK QUESTIONS</h3>
+                <div class="overflow-hidden img-fluid">
+                    <img src="../images/boyreading5.jpg" alt="A boy reading">
+                </div>
+                <p class="p-5">Asking questions while reading to your child is not only great for encouraging your child to interact with the book, but it is also extremely effective in developing his ability to comprehend what he is reading.</p>
+            </div>
+            <div class=" d-flex flex-column align-items-center">
+                <h3 class="p-2">3. BE A GOOD (READING) EXAMPLE</h3>
+                <div class="overflow-hidden img-fluid">
+                    <img src="../images/boyreading4.jpg" alt="A boy reading with his dad">
+                </div>
+                <p class="p-5">Even if your child is fascinated with books from an early age, her fascination will quickly dwindle if she does not see reading modeled in her home. If you are not an avid reader yourself, make a conscious effort to let your children see you reading for at least a few minutes each day! </p>
+            </div>
+        </section> -->
+        <footer class="container-fluid p-0 bg-light mt-5">
+            <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
+                <figure class="img-banner">
+                </figure>
+                <p>All rights reserved</p>
+                <div class="rrss">
+                    <div class="rrss-fb">
+                        <a rel="noopener" href="#"></a>
+                    </div>
+                    <div class="rrss-ig">
+                        <a rel="noopener" href="#"></a>
+                    </div>
+                    <div class="rrss-tw">
+                        <a rel="noopener" href="#"></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+		<script src="../wow.js"></script>
+		<script>
+			new WOW().init();
+		</script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </body>
 </html>
