--- a/section/contact.html
+++ b/section/contact.html
@@ -1,114 +1,121 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Contact us to learn more about reading, best-sellers, gender and the best ways for your child to learn to read.">
-    <meta name="keywords" content="child, read, best-sellers, teach, New York Times, 2021, reading, book, genre, raking, boy, girl">
-    <link rel="icon" type="image/png" href="../images/book.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Library Contact</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
-      <figure class="img-banner">
-      </figure>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../section/genre.html">Genre</a>
-             </li>
-             <li class="nav-item">
-                <a class="nav-link" href="../section/kids.html">Kids</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="../section/contact.html">Contact</a>
-            </li>
-          </ul>
-          <form class="d-flex justify-content-end">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-secondary border-0" type="submit">Search</button>
-          </form>
-        </div>
-    </nav>
-    <section class="container padding-section contacto d-flex align-items-center flex-column">
-      <h1 class="title__bestsellers anima animate__animated animate__backInLeft mb-4">You can contact us!</h1>
-      <div class="col-12 col-lg-8 col-md-9">
-        <form>
-          <div class="mb-3 row">
-            <label for="inputName" class="col-sm-2 col-form-label">Name</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputName">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Contact us to learn more about reading, best-sellers, gender and the best ways for your child to learn to read.">
+        <meta name="keywords" content="child, read, best-sellers, teach, New York Times, 2021, reading, book, genre, raking, boy, girl">
+        <link rel="icon" type="image/png" href="../images/book.png">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <link rel="stylesheet" href="../css/estilos.css">
+        <title>Library Contact</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
+            <figure class="img-banner">
+            </figure>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/bestsellers.html">Bestsellers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/genre.html">Genre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../section/kids.html">Kids</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../section/contact.html">Contact</a>
+                    </li>
+                </ul>
+                <form class="d-flex justify-content-end">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-secondary border-0" type="submit">Search</button>
+                </form>
             </div>
-          </div>
-          <div class="mb-3 row">
-            <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputLastName">
+        </nav>
+        <section class="container padding-section contacto d-flex align-items-center flex-column">
+            <h1 class="title__bestsellers anima animate__animated animate__backInLeft mb-4">You can contact us!</h1>
+            <div class="col-12 col-lg-8 col-md-9">
+                <form>
+                    <div class="mb-3 row">
+                        <label for="inputName" class="col-sm-2 col-form-label">Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputName">
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputLastName">
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="exampleFormControlInput1" class="col-sm-2 col-form-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="exampleFormControlTextarea1" class="col-sm-2 col-form-label">Message</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center flex-column mb-3">
+                        <p>To send the form you must accept the terms and conditions</p>
+                        <div class="form-check form-switch">
+                            <label class="form-check-label" for="flexSwitchCheckDefault">I agree</label>
+                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button type="reset" class="button__reset m-2 wow animate__animated animate__pulse">Clean</button>
+                        <button type="submit" class="button__submit m-2 wow animate__animated animate__pulse">Submit</button>
+                    </div>
+                </form>
             </div>
-          </div>
-          <div class="mb-3 row">
-            <label for="exampleFormControlInput1" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </section>
+        <section class="container mt-5 d-flex flex-column align-items-center">
+            <h1 class="d-flex justify-content-center wow title__bestsellers text-focus-in mb-3">Or you can download our app!</h1>
+            <div class="rrss-download d-flex justify-content-around mt-5">
+                <figure class="rrss-googleplay wow animate__flipInX anima animate__animated"><a rel="noopener" class="d-block" href="https://play.google.com/store"></a></figure>
+                <figure class="rrss-appstore wow animate__flipInX animate__animated anima"><a rel="noopener" class="d-block" href="https://www.apple.com/la/app-store/"></a></figure>
             </div>
-          </div>
-          <div class="mb-3 row">
-            <label for="exampleFormControlTextarea1" class="col-sm-2 col-form-label">Message</label>
-            <div class="col-sm-10">
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </section>
+        <footer class="container-fluid p-0 bg-light mt-5">
+            <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
+                <figure class="img-banner">
+                </figure>
+                <p>All rights reserved</p>
+                <div class="rrss">
+                    <div class="rrss-fb">
+                        <a rel="noopener" href="https://www.facebook.com/"></a>
+                    </div>
+                    <div class="rrss-ig">
+                        <a rel="noopener" href="https://www.instagram.com/"></a>
+                    </div>
+                    <div class="rrss-tw">
+                        <a rel="noopener" href="https://www.twitter.com/"></a>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="d-flex align-items-center flex-column mb-3">
-            <p>To send the form you must accept the terms and conditions</p>
-          <div class="form-check form-switch">
-            <label class="form-check-label" for="flexSwitchCheckDefault">I agree</label>
-            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-          </div>
-          </div>
-          <div class="d-flex justify-content-center">
-          <button type="reset" class="button__reset m-2 color-change-2x">Clean</button>
-          <button type="submit" class="button__submit m-2 color-change-2x-submit">Submit</button>
-          </div>
-        </form>
-      </div>
-    </section>
-    <section class="container mt-5 d-flex flex-column align-items-center">
-      <h1 class="d-flex justify-content-center title__bestsellers text-focus-in mb-3">Or you can download our app!</h1>
-        <div class="rrss-download d-flex justify-content-around mt-5">
-          <figure class="rrss-googleplay"><a rel="noopener" class="d-block" href="#"></a></figure>
-          <figure class="rrss-appstore"><a rel="noopener" class="d-block" href="#"></a></figure>
-        </div>
-    </section>
-    <footer class="container-fluid p-0 bg-light mt-5">
-      <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-        <figure class="img-banner">
-        </figure>
-        <p class="animate__animated animate__pulse">All rights reserved</p>
-        <div class="rrss">
-          <div class="rrss-fb"><a rel="noopener" href="#">
-          </a></div>
-          <div class="rrss-ig"><a rel="noopener" href="#">
-          </a></div>
-          <div class="rrss-tw"><a rel="noopener" href="#">
-          </a></div>
-        </div>
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+        </footer>
+        <script src="../wow.js"></script>
+		<script>
+			new WOW().init();
+		</script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </body>
 </html>
