add puliendo proyecto final

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Dynamic library in which you find a list of ten benefits of reading and a TED Talk by Luke Bakic about POWER and the importance of READING.">
 		<meta name="keywords" content="Library, Luke Bakic, POWER, importance, READING, benefits, TED TALK">
-		<link rel="icon" type="image/png" href="images\book.svg">
+		<link rel="icon" type="image/svg" href="images\book.svg">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 		<link rel="stylesheet" href="css\estilos.css">
 		<title>Library</title>
 	</head>
@@ -91,7 +94,7 @@
 						<button type="button" data-bs-target="#carouselExampleCaptionsResponsive" data-bs-slide-to="1" aria-label="Slide 2"></button>
 						<button type="button" data-bs-target="#carouselExampleCaptionsResponsive" data-bs-slide-to="2" aria-label="Slide 3"></button>
 					</div>
-					<div class="carousel-inner" id="fondo">
+					<div class="carousel-inner opacity-carousel" id="fondo">
 						<div class="carousel-item active">
 							<img src="images\bookresponsive.jpg" alt="A book">
 							<div class="carousel-caption d-none d-md-block">
@@ -251,23 +254,23 @@
 			</article>
 		</section>
 		<footer class="container-fluid p-0 bg-light mt-5">
-			<div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-				<figure class="img-banner">
-				</figure>
-				<p>All rights reserved</p>
-				<div class="rrss">
-					<div class="rrss-fb">
-						<a rel="noopener" href="#"></a>
-					</div>
-					<div class="rrss-ig">
-						<a rel="noopener" href="#"></a>
-					</div>
-					<div class="rrss-tw">
-						<a rel="noopener" href="#"></a>
-					</div>
-				</div>
-			</div>
-		</footer>
+            <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
+                <figure class="img-banner">
+                </figure>
+                <p>All rights reserved</p>
+                <div class="rrss">
+                    <div class="rrss-fb">
+                        <a rel="noopener" href="https://www.facebook.com/"></a>
+                    </div>
+                    <div class="rrss-ig">
+                        <a rel="noopener" href="https://www.instagram.com/"></a>
+                    </div>
+                    <div class="rrss-tw">
+                        <a rel="noopener" href="https://www.twitter.com/"></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
 		<script src="wow.js"></script>
 		<script>
 			new WOW().init();
