--- a/section/bestsellers.html
+++ b/section/bestsellers.html
@@ -3,23 +3,26 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="In this library you will find how the rankings of the best sellers work, especially the New York Times. You can also find the updated list of the best sellers so far and a direct link to buy them.">
-        <meta name="keywords" content="NYT, New York Times, Best Sellers, raking, buy, WISH YOU WERE HERE, THE 1619 PROJECT, IT ENDS WITH US">
-        <link rel="icon" type="image/png" href="../images/book.png">
+        <meta name="description" content="What is the literary genre? We will show you the best-selling literary genres in 2021 and how to choose the best for you.">
+        <meta name="keywords" content="Genre, 2021, literary, best sellers, best-selling">
+		<link rel="icon" type="image/svg" href="../images/book.svg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="../css/estilos.css">
-        <title>Library Best Sellers</title>
+        <title>BestSellers</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
             <div class="img-banner">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
@@ -61,7 +64,7 @@
             <div class="description">
                 <div class="mb-5 mt-5">
                     <h3 class="wow animate__animated animate__lightSpeedInLeft anima"><strong>Methodology</strong></h3>
-                    <p>The weekly bestsellers are calculated from Monday to Monday. Here is how they describe their methodology on their website -- "Rankings reflect sales reh3orted by vendors offering a wide range of general interest titles. The sales venues for print books include independent book retailers; national, regional and local chains; online and multimedia entertainment retailers; supermarkets, university, gift and discount department stores; and newsstands. Ebook rankings reflect sales from leading online vendors of ebooks in a variety of popular ereader formats. Ebook sales are presently included for all adult categories (fiction, non-fiction and advice) except for graphic novels, and all children's categories with the exception of picture books. Titles are included regardless of whether they are published in both print and electronic formats or just one format. Ebooks available exclusively from a single vendor will be tracked at a future date."</p>
+                    <p>The weekly bestsellers are calculated from Monday to Monday. Here is how they describe their methodology on their website -- "Rankings reflect sales reheorted by vendors offering a wide range of general interest titles. The sales venues for print books include independent book retailers; national, regional and local chains; online and multimedia entertainment retailers; supermarkets, university, gift and discount department stores; and newsstands. Ebook rankings reflect sales from leading online vendors of ebooks in a variety of popular ereader formats. Ebook sales are presently included for all adult categories (fiction, non-fiction and advice) except for graphic novels, and all children's categories with the exception of picture books. Titles are included regardless of whether they are published in both print and electronic formats or just one format. Ebooks available exclusively from a single vendor will be tracked at a future date."</p>
                     <p>As I mentioned before, the New York Times list is a survey list, not a tabulation of total sales. This means that they poll a curated selection of booksellers to estimate sales. They literally decide which bookstores and retail outlets are important and then only count those sales, ignoring all other sales. They also heavily weight independent bookstore sales. This is because they think that the type of people who shop at indie bookstores are more serious readers and thus their reading decisions deserve more attention. I'm serious, they have said this in public.</p>
                     <p>They also focus on individual sales, and try to not include bulk sales in their calculations. They do this to prevent people from buying their way onto the list. If you sell 1,000 copies to a company as part of a speaking engagement deal, this is a great way to move copies and make money, but it’s not very effective for hitting the list, because they won't count it.</p>
                     <p>And notice how they say that won't count ebook sales from only one source? This is a direct shot at Amazon. They don't like Amazon, and they don't think ebooks are real books. They don't want to see their ebook list dominated by Amazon's Kindle list.</p>
@@ -301,13 +304,13 @@
                 <p>All rights reserved</p>
                 <div class="rrss">
                     <div class="rrss-fb">
-                        <a rel="noopener" href="#"></a>
+                        <a rel="noopener" href="https://www.facebook.com/"></a>
                     </div>
                     <div class="rrss-ig">
-                        <a rel="noopener" href="#"></a>
+                        <a rel="noopener" href="https://www.instagram.com/"></a>
                     </div>
                     <div class="rrss-tw">
-                        <a rel="noopener" href="#"></a>
+                        <a rel="noopener" href="https://www.twitter.com/"></a>
                     </div>
                 </div>
             </div>
