--- a/section/contact.html
+++ b/section/contact.html
@@ -3,16 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Contact us to learn more about reading, best-sellers, gender and the best ways for your child to learn to read.">
-        <meta name="keywords" content="child, read, best-sellers, teach, New York Times, 2021, reading, book, genre, raking, boy, girl">
-        <link rel="icon" type="image/png" href="../images/book.png">
+        <meta name="description" content="What is the literary genre? We will show you the best-selling literary genres in 2021 and how to choose the best for you.">
+        <meta name="keywords" content="Genre, 2021, literary, best sellers, best-selling">
+		<link rel="icon" type="image/svg" href="../images/book.svg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="../css/estilos.css">
-        <title>Library Contact</title>
+        <title>Contact</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
