--- a/section/genre.html
+++ b/section/genre.html
@@ -5,16 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="What is the literary genre? We will show you the best-selling literary genres in 2021 and how to choose the best for you.">
         <meta name="keywords" content="Genre, 2021, literary, best sellers, best-selling">
-        <link rel="icon" type="image/png" href="../images/book.png">
+		<link rel="icon" type="image/svg" href="../images/book.svg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="../css/estilos.css">
-        <title>Library Genre</title>
+        <title>Genre</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
@@ -92,7 +93,7 @@
                 </div>
                 <div class="row bigcard-container">
                     <div class="bigcard-container-div1">
-                        <a href=""><p>Looking for some fiction stories?...</p></a>
+                        <p>Looking for some fiction stories?...</p>
                         <p>“Do you think we’ll ever go back to the way it was?” I ask Finn. He glances at me. “I don’t know,” he says thoughtfully. “When I used to talk to patients before surgery, they always asked if they’d be able to do everything they used to do before the operation. I mean, technically, the answer should be yes. But there’s always a scar. Even if it’s not right across your belly, it’s in your head somewhere—the brand-new knowledge that you weren’t invincible. I think that changes you for the long haul.”
                             <br>
                             ― Jodi Picoult, Wish You Were Here
@@ -166,13 +167,13 @@
                 <p>All rights reserved</p>
                 <div class="rrss">
                     <div class="rrss-fb">
-                        <a rel="noopener" href="#"></a>
+                        <a rel="noopener" href="https://www.facebook.com/"></a>
                     </div>
                     <div class="rrss-ig">
-                        <a rel="noopener" href="#"></a>
+                        <a rel="noopener" href="https://www.instagram.com/"></a>
                     </div>
                     <div class="rrss-tw">
-                        <a rel="noopener" href="#"></a>
+                        <a rel="noopener" href="https://www.twitter.com/"></a>
                     </div>
                 </div>
             </div>
