--- a/section/kids.html
+++ b/section/kids.html
@@ -3,17 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="How to teach a child to read a book in 3 simple steps.">
-        <meta name="keywords" content="child, read, teach, reading, book, genre, boy, girl">
-        <link rel="icon" type="image/png" href="../images/book.png">
+        <meta name="description" content="What is the literary genre? We will show you the best-selling literary genres in 2021 and how to choose the best for you.">
+        <meta name="keywords" content="Genre, 2021, literary, best sellers, best-selling">
+		<link rel="icon" type="image/svg" href="../images/book.svg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="../css/estilos.css">
-        <title>Library Kids</title>
+        <title>Kids</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
@@ -89,37 +91,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
-
-
-
-
-        <!-- <section class="container padding-section container__kids">
-            <h1 class="title__bestsellers anima animate__animated animate__backInLeft">HOW TO TEACH A CHILD TO READ IN 3 EASY STEPS</h1>
-            <div class=" d-flex flex-column align-items-center">
-                <h3 class="p-2">1. READ ALOUD TO YOUR CHILD </h3>
-                <div class="overflow-hidden img-fluid">
-                    <img src="../images/boyreading.jpg" alt="A boy reading with his mom">
-                </div>
-                <p class="p-5">Teaching your child to read is truly a process that begins at infancy. How much you read to your child is completely up to you and your family, but I suggest you aim to read at least 3-4 books a day, even while your child is very young.</p>
-            </div>
-            <div class=" d-flex flex-column align-items-center">
-                <h3 class="p-2">2. ASK QUESTIONS</h3>
-                <div class="overflow-hidden img-fluid">
-                    <img src="../images/boyreading5.jpg" alt="A boy reading">
-                </div>
-                <p class="p-5">Asking questions while reading to your child is not only great for encouraging your child to interact with the book, but it is also extremely effective in developing his ability to comprehend what he is reading.</p>
-            </div>
-            <div class=" d-flex flex-column align-items-center">
-                <h3 class="p-2">3. BE A GOOD (READING) EXAMPLE</h3>
-                <div class="overflow-hidden img-fluid">
-                    <img src="../images/boyreading4.jpg" alt="A boy reading with his dad">
-                </div>
-                <p class="p-5">Even if your child is fascinated with books from an early age, her fascination will quickly dwindle if she does not see reading modeled in her home. If you are not an avid reader yourself, make a conscious effort to let your children see you reading for at least a few minutes each day! </p>
-            </div>
-        </section> -->
         <footer class="container-fluid p-0 bg-light mt-5">
             <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
                 <figure class="img-banner">
@@ -127,13 +100,13 @@
                 <p>All rights reserved</p>
                 <div class="rrss">
                     <div class="rrss-fb">
-                        <a rel="noopener" href="#"></a>
+                        <a rel="noopener" href="https://www.facebook.com/"></a>
                     </div>
                     <div class="rrss-ig">
-                        <a rel="noopener" href="#"></a>
+                        <a rel="noopener" href="https://www.instagram.com/"></a>
                     </div>
                     <div class="rrss-tw">
-                        <a rel="noopener" href="#"></a>
+                        <a rel="noopener" href="https://www.twitter.com/"></a>
                     </div>
                 </div>
             </div>
