--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light p-4 container-fluid position-fixed">
-			<figure class="img-banner">
-			</figure>
+			<a href="index.html">
+				<figure class="img-banner">
+				</figure>
+			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -255,8 +257,10 @@
 		</section>
 		<footer class="container-fluid p-0 bg-light mt-5">
             <div class="footer d-flex justify-content-between align-items-center flex-wrap p-4">
-                <figure class="img-banner">
-                </figure>
+                <a href="index.html">
+					<figure class="img-banner">
+					</figure>
+				</a>
                 <p>All rights reserved</p>
                 <div class="rrss">
                     <div class="rrss-fb">
