--- a/section/kids.html
+++ b/section/kids.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </footer>
-		<script src="../wow.js"></script>
+		<script src="../js/wow.js"></script>
 		<script>
 			new WOW().init();
 		</script>
