--- a/section/genre.html
+++ b/section/genre.html
@@ -182,7 +182,7 @@
                 </div>
             </div>
         </footer>
-		<script src="../wow.js"></script>
+		<script src="../js/wow.js"></script>
 		<script>
 			new WOW().init();
 		</script>
