--- a/section/contact.html
+++ b/section/contact.html
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </footer>
-        <script src="../js/wow.js"></script>
+        <script src="../wow.js"></script>
 		<script>
 			new WOW().init();
 		</script>
