--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 </div>
             </div>
         </footer>
-		<script src="js\wow.js"></script>
+		<script src="wow.js"></script>
 		<script>
 			new WOW().init();
 		</script>
