--- a/section/bestsellers.html
+++ b/section/bestsellers.html
@@ -319,7 +319,7 @@
                 </div>
             </div>
         </footer>
-		<script src="../js/wow.js"></script>
+		<script src="../wow.js"></script>
 		<script>
 			new WOW().init();
 		</script>
